added header and footer #2

--- a/home.html
+++ b/home.html
@@ -5,5 +5,15 @@
 <body>
     <header>
         <h1>Title</h1>
+        <ul>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+        </ul>
     </header>
+    <footer>
+        <img src="copyright.png" height="50px" width="50px">
+        <p>2022</p>
+        <p>Tobias The</p>
+    </footer>
 </body>
