--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,19 @@
 <!DOCTYPE html>
+<head>
+
+</head>
+<body>
+    <header>
+        <h1>Title</h1>
+        <ul>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+        </ul>
+    </header>
+    <footer>
+        <img src="copyright.png" height="50px" width="50px">
+        <p>2022</p>
+        <p>Tobias The</p>
+    </footer>
+</body>
