home.html done #2

--- a/home.html
+++ b/home.html
@@ -11,6 +11,11 @@
             <li>CONTACT</li>
         </ul>
     </header>
+    <p>
+        Welcome to the website, dear traveler. <br>
+        Here we will have some fun while also learning a thing or two. <br>
+        See you around traveler!
+    </p>
     <footer>
         <img src="copyright.png" height="50px" width="50px">
         <p>2022</p>
