added text to about page, added links to header #2

--- a/about.html
+++ b/about.html
@@ -6,13 +6,26 @@
     <header>
         <h1>Title</h1>
         <ul>
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
+            <li><a href="TODO">HOME</a></li>
+            <li><a href="TODO">ABOUT</a></li>
+            <li><a href="TODO">CONTACT</a></li>
         </ul>
     </header>
 
-    
+    <p>My name is Tobias, and I am building this website right now. <br>
+        I am planning on making this a bigger project, but everyone has to start somewhere.
+    </p>
+
+    <p>
+        My hobbies consist of:<br>
+        <ul>
+            <li>Music production</li>
+            <li>Video games (mainly first person shooters)</li>
+            <li>Sports (tennis, table tennis, basket ball)</li>
+        </ul>
+    </p>
+
+    <p>If you have any questions, go over to the contact page. You can find information there.</p>
 
     <footer>
         <img src="copyright.png" height="50px" width="50px">
