--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <header>
         <h1>Title</h1>
         <ul>
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
+            <li><a href="TODO">HOME</a></li>
+            <li><a href="TODO">ABOUT</a></li>
+            <li><a href="TODO">CONTACT</a></li>
         </ul>
     </header>
     <footer>
