--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
     <header>
         <h1>Title</h1>
         <ul>
-            <li><a href="TODO">HOME</a></li>
-            <li><a href="TODO">ABOUT</a></li>
-            <li><a href="TODO">CONTACT</a></li>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </header>
 
