changed copyright from image to special character #2

--- a/home.html
+++ b/home.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
+    <style>
+        body {
+            width: 800px;
 
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,7 +22,7 @@
         See you around traveler!
     </p>
     <footer>
-        <img src="copyright.png" height="50px" width="50px">
+         	&#169;
         <p>2022</p>
         <p>Tobias The</p>
     </footer>
