changed values from dutch to english

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
         <label for="aanhef">Aanhef:</label>
 
         <select name="aanhef" id="aanhef">
-            <option value="Dhr">Dhr</option>
-            <option value="Mvr">Mvr</option>
-            <option value="anders">Anders</option>
+            <option value="Sir">Dhr</option>
+            <option value="Madam">Mvr</option>
+            <option value="Other">Anders</option>
         </select><br><br>
 
         <label for="name">Naam:</label>
