naam van nederlands naar engels veranderd

--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
         </ul>
     </header>
     <form>
-        <label for="aanhef">Aanhef:</label>
+        <label for="gender">Aanhef:</label>
 
-        <select name="aanhef" id="aanhef">
+        <select name="gender" id="gender">
             <option value="Sir">Dhr</option>
             <option value="Madam">Mvr</option>
             <option value="Other">Anders</option>
