--- a/home.html
+++ b/home.html
@@ -51,12 +51,12 @@
 
         a:link {
             text-decoration: none;
-            color: black;
+            color: white;
         }
 
         a:visited {
             text-decoration: none;
-            color:black;
+            color:white;
         }
     </style>
 </head>
