--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <<header>
+    <header>
         <h1>Title</h1>
         <ul>
             <li><a href="home.html">HOME</a></li>
