--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <head>
     <style>
         .container {
+            display: block;
             width: 800px;
             height: 100%;
             margin-right: auto;
@@ -12,6 +13,7 @@
             text-align: center;
             background-color:rgb(55, 114, 202);
             min-height: 48px;
+            padding: 1px;
         }
 
         footer {
@@ -48,15 +50,17 @@
         .list ul {
             display: inline;
         }
-
-        a:link {
-            text-decoration: none;
+        .menu {
             color: white;
+            font-size: large;
         }
 
-        a:visited {
+        .menu:link {
             text-decoration: none;
-            color:white;
+        }
+
+        .menu:visited {
+            text-decoration: none;
         }
     </style>
 </head>
@@ -65,9 +69,9 @@
         <header>
             <h1 class="header">Title</h1>
             <ul class="list">
-                <div class="divh"><li><a href="home.html" class="header">HOME</a></li></div>
-                <div class="divh"><li><a href="about.html"class="header">ABOUT</a></li></div>
-                <div class="divh"><li><a href="contact.html"class="header">CONTACT</a></li></div>
+                <div class="divh"><li><a href="home.html" class="menu">HOME</a></li></div>
+                <div class="divh"><li><a href="about.html"class="menu">ABOUT</a></li></div>
+                <div class="divh"><li><a href="contact.html"class="menu">CONTACT</a></li></div>
             </ul>
         </header>
         <p class="body">
