updated css to support bullet lists without issue

--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
         .menu {
             color: white;
             font-size: large;
+            list-style-type: none;
         }
 
         .menu:link {
@@ -69,9 +70,9 @@
         <header>
             <h1 class="header">Title</h1>
             <ul class="list">
-                <div class="divh"><li><a href="home.html" class="menu">HOME</a></li></div>
-                <div class="divh"><li><a href="about.html"class="menu">ABOUT</a></li></div>
-                <div class="divh"><li><a href="contact.html"class="menu">CONTACT</a></li></div>
+                <div class="divh"><li class="menu"><a href="home.html" class="menu">HOME</a></li></div>
+                <div class="divh"><li class="menu"><a href="about.html"class="menu">ABOUT</a></li></div>
+                <div class="divh"><li class="menu"><a href="contact.html"class="menu">CONTACT</a></li></div>
             </ul>
         </header>
         <form class="body">
