fixed value issue #3

--- a/contact.html
+++ b/contact.html
@@ -88,10 +88,10 @@
             <input type="text" id="name" name="name"><br><br>
 
             <label for="email">E-mail adres:</label>
-            <input type="text" id="email" name="email" value="email"><br><br>
+            <input type="text" id="email" name="email"><br><br>
 
             <label for="tlf">Telefoonnummer:</label>
-            <input type="number" id="tlf" name="tlf" value="tlf"><br><br>
+            <input type="number" id="tlf" name="tlf"><br><br>
 
             <p>Communicatievoorkeur:</p>
             
