--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
         header {
             text-align: center;
-            background-color:rgb(55, 114, 202);
+            background-color: rgb(86, 7, 86);
             min-height: 48px;
             padding: 1px;
         }
@@ -32,6 +32,7 @@
 
         .divh {
             display: inline-block;
+            background-color:rgb(35, 85, 160);
             max-width: 30%;
             border: 1px solid white;
             padding: 5px;
@@ -62,6 +63,14 @@
 
         .menu:visited {
             text-decoration: none;
+        }
+
+        .input {
+            width: 400px;
+        }
+        
+        h1 {
+            font-size: 40px;
         }
     </style>
 </head>
