--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
             height: 100%;
             margin-right: auto;
             margin-left: auto;
+            background-color: white;
         }
 
         header {
