--- a/home.html
+++ b/home.html
@@ -4,9 +4,10 @@
         .container {
             display: block;
             width: 800px;
-            height: 100%;
+            height: auto;
             margin-right: auto;
             margin-left: auto;
+            background-color: white;
         }
 
         header {
@@ -18,6 +19,7 @@
 
         footer {
             margin-bottom: 0%;
+            margin-top: auto;
             text-align: right;
             background-color: black;
             color: white;
@@ -42,6 +44,7 @@
         .body {
             font-size: 12px;
             color: rgb(100, 96, 96);
+            
         }
 
         li {
