--- a/about.html
+++ b/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <head>
     <style>
+        body {
+            background-color: white;
+        }
         .container {
             display: block;
             width: 800px;
             height: 100%;
             margin-right: auto;
             margin-left: auto;
-            background-color: white;
         }
 
         header {
