--- a/home.html
+++ b/home.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <head>
     <style>
+        body {
+            background-color: white;
+        }
+        
         .container {
             display: block;
             width: 800px;
             height: auto;
             margin-right: auto;
             margin-left: auto;
-            background-color: white;
         }
 
         header {
