--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <head>
     <style>
+        body {
+            background-color: white;
+        }
+        
         .container {
             display: block;
             width: 800px;
