--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
             <ul class="list">
                 <div class="divh"><li class="menu"><a href="home.html" class="menu">HOME</a></li></div>
                 <div class="divh"><li class="menu"><a href="about.html"class="menu">ABOUT</a></li></div>
-                <div class="divh"><li class="menu"><a href="contact.html"class="menu">CONTACT</a></li></div>
+                <div class="divh"><li class="menu"><a href="contact.php"class="menu">CONTACT</a></li></div>
             </ul>
         </header>
         <p class="body">
